--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CardGames/pybind11"]
 	path = CardGames/pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "CardGames/lib/pybind11"]
+	path = CardGames/lib/pybind11
+	url = https://github.com/pybind/pybind11.git
