Compute melds with C++ (#49)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 profile.sh
 venv
+.env
 
 .DS_Store
 
@@ -15,4 +16,4 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Editors: VSCode
-.vscode/*
+.vscode/c_cpp_properties.json
