--- a/CardGames/CMakeLists.txt
+++ b/CardGames/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.12)
 project(CardGames)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(pybind11)
-pybind11_add_module(card_games main.cpp)
+add_subdirectory(lib/pybind11)
+
+# Collect source files into the SOURCES variable
+file(GLOB SOURCES "src/main.cpp" "src/deck/*.cpp" "src/gin/*.cpp")
+
+# Add a library target
+pybind11_add_module(card_games ${SOURCES})
