--- a/CardGames/CMakeLists.txt
+++ b/CardGames/CMakeLists.txt
@@ -3,10 +3,12 @@ project(CardGames)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(lib/pybind11)
+# add_subdirectory(lib/pybind11)
 
 # Collect source files into the SOURCES variable
-file(GLOB SOURCES "src/main.cpp" "src/deck/*.cpp" "src/gin/*.cpp")
+file(GLOB SOURCES "src/CardGames.h" "src/deck/*.cpp" "src/gin/*.cpp")
 
 # Add a library target
-pybind11_add_module(card_games ${SOURCES})
+# pybind11_add_module(card_games ${SOURCES})
+
+add_library(CardGames ${SOURCES})
