--- a/CardGames/CMakeLists.txt
+++ b/CardGames/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 # add_subdirectory(lib/pybind11)
 
 # Collect source files into the SOURCES variable
-file(GLOB SOURCES "src/CardGames.h" "src/deck/*.cpp" "src/gin/*.cpp")
+file(GLOB SOURCES "CardGames.hpp" "src/deck/*.cpp" "src/gin/*.cpp")
 
 # Add a library target
 # pybind11_add_module(card_games ${SOURCES})
