--- a/CardGames/CMakeLists.txt
+++ b/CardGames/CMakeLists.txt
@@ -3,15 +3,12 @@ project(CardGames)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# Collect source files into the SOURCES variable
-file(GLOB SOURCES "CardGames.hpp" "src/deck/*.cpp" "src/gin/*.cpp")
-
-add_library(CardGames ${SOURCES})
-
-set_target_properties(CardGames PROPERTIES CXX_VISIBILITY_PRESET hidden)
-
-
 add_subdirectory(lib/pybind11)
 
+file(GLOB LIBRARY_SOURCES "CardGames.hpp" "src/main.cpp" "src/deck/*.cpp" "src/gin/*.cpp")
+add_library(CardGames ${LIBRARY_SOURCES})
+set_target_properties(CardGames PROPERTIES CXX_VISIBILITY_PRESET hidden)
+
 # Generate Python module.
-pybind11_add_module(card_games ${SOURCES})
+file(GLOB PYBIND_SOURCES "CardGames.hpp" "src/deck/*.cpp" "src/gin/*.cpp")
+pybind11_add_module(card_games ${PYBIND_SOURCES})
