--- a/CardGames/CMakeLists.txt
+++ b/CardGames/CMakeLists.txt
@@ -5,8 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(lib/pybind11)
 
-# Collect source files into the SOURCES variable
-file(GLOB SOURCES "src/main.cpp" "src/deck/*.cpp" "src/gin/*.cpp")
+file(GLOB LIBRARY_SOURCES "CardGames.hpp" "src/deck/*.cpp" "src/gin/*.cpp")
+add_library(CardGames ${LIBRARY_SOURCES})
+set_target_properties(CardGames PROPERTIES CXX_VISIBILITY_PRESET hidden)
 
-# Add a library target
-pybind11_add_module(card_games ${SOURCES})
+# Generate Python module.
+file(GLOB PYBIND_SOURCES "src/main.cpp" "src/deck/*.cpp" "src/gin/*.cpp")
+pybind11_add_module(card_games ${PYBIND_SOURCES})
