--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,8 @@
         "streambuf": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "__verbose_abort": "cpp",
+        "bit": "cpp"
     }
 }
