we should now see a big gain i think

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -118,6 +118,9 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "__verbose_abort": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "utility": "cpp"
     }
 }
